[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/level2.png" type="Texture" id=1]
[ext_resource path="res://Assets/level1.png" type="Texture" id=2]
[ext_resource path="res://Assets/level4.png" type="Texture" id=3]
[ext_resource path="res://Assets/level5.png" type="Texture" id=4]
[ext_resource path="res://Assets/level8.png" type="Texture" id=5]
[ext_resource path="res://Assets/level3.png" type="Texture" id=6]
[ext_resource path="res://Assets/level6.png" type="Texture" id=7]
[ext_resource path="res://Assets/choose_a_level.png" type="Texture" id=8]
[ext_resource path="res://Assets/level9.png" type="Texture" id=9]
[ext_resource path="res://Assets/level10.png" type="Texture" id=10]
[ext_resource path="res://Assets/level7.png" type="Texture" id=11]
[ext_resource path="res://Assets/backgrounds/city_night.png" type="Texture" id=12]
[ext_resource path="res://Scenes/ChooseLevel.gd" type="Script" id=13]
[ext_resource path="res://Assets/sfx/menu_select.wav" type="AudioStream" id=14]
[ext_resource path="res://Assets/music/Ludum Dare 28 - Track 4.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/sfx/menu_selected.wav" type="AudioStream" id=16]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float time_factor = 3;
uniform bool playing = false;

void vertex(){
	if(playing){
		VERTEX.x += cos(TIME * time_factor + VERTEX.x + VERTEX.y) * 10.0;
		VERTEX.y += sin(TIME * time_factor + VERTEX.x) * 0.10;		
	}
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/time_factor = 3.0
shader_param/playing = false

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/time_factor = 3.0
shader_param/playing = false

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/time_factor = 3.0
shader_param/playing = false

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/time_factor = 3.0
shader_param/playing = false

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/time_factor = 3.0
shader_param/playing = false

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/time_factor = 3.0
shader_param/playing = false

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/time_factor = 3.0
shader_param/playing = false

[sub_resource type="ShaderMaterial" id=9]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/time_factor = 3.0
shader_param/playing = false

[sub_resource type="ShaderMaterial" id=10]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/time_factor = 3.0
shader_param/playing = false

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/time_factor = 3.0
shader_param/playing = false

[node name="ChooseLevel" type="Node"]
script = ExtResource( 13 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 424.0
margin_bottom = 280.0
rect_scale = Vector2( 0.563, 0.563 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choose_a_level" type="Sprite" parent="."]
position = Vector2( 520, 89 )
texture = ExtResource( 8 )

[node name="MenuOptions" type="Node2D" parent="."]
position = Vector2( 0, -24 )

[node name="level1" type="Sprite" parent="MenuOptions"]
material = SubResource( 2 )
position = Vector2( 288, 232 )
texture = ExtResource( 2 )

[node name="level2" type="Sprite" parent="MenuOptions"]
material = SubResource( 3 )
position = Vector2( 280, 312 )
texture = ExtResource( 1 )

[node name="level3" type="Sprite" parent="MenuOptions"]
material = SubResource( 4 )
position = Vector2( 272, 384 )
texture = ExtResource( 6 )

[node name="level4" type="Sprite" parent="MenuOptions"]
material = SubResource( 5 )
position = Vector2( 264, 456 )
texture = ExtResource( 3 )

[node name="level5" type="Sprite" parent="MenuOptions"]
material = SubResource( 6 )
position = Vector2( 256, 528 )
texture = ExtResource( 4 )

[node name="level6" type="Sprite" parent="MenuOptions"]
material = SubResource( 7 )
position = Vector2( 728, 232 )
texture = ExtResource( 7 )

[node name="level7" type="Sprite" parent="MenuOptions"]
material = SubResource( 8 )
position = Vector2( 728, 304 )
texture = ExtResource( 11 )

[node name="level8" type="Sprite" parent="MenuOptions"]
material = SubResource( 9 )
position = Vector2( 728, 376 )
texture = ExtResource( 5 )

[node name="level9" type="Sprite" parent="MenuOptions"]
material = SubResource( 10 )
position = Vector2( 728, 456 )
texture = ExtResource( 9 )

[node name="level10" type="Sprite" parent="MenuOptions"]
material = SubResource( 11 )
position = Vector2( 728, 528 )
texture = ExtResource( 10 )

[node name="Sfx" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 15 )
autoplay = true
bus = "Music"

[node name="MenuSelect" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 14 )
bus = "SoundEffect"

[node name="MenuSelected" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 16 )
bus = "SoundEffect"
